# RUTOKEN_RAG

./: .dockerignore  .env.example  .gitignore  BENCHMARK.md  DISSERTATION_RESEARCH_POINTS.md  Dockerfile  README.md  RESEARCH_QUESTIONS_TABLE.md  RESEARCH_RETRIEVAL_RESULTS_25DOCS.md  docker-compose.yml  pyproject.toml
app/: config.py  main.py
app/api/: schemas.py
app/domain/: graph_models.py  models.py
app/prompts/: templates.py
app/providers/: gigachat.py  openrouter.py  reranker.py
app/retrieval/: bm25_index.py  qdrant_store.py
app/services/: benchmark_repository.py  benchmark_seed_data.py  benchmarking.py  bm25_baseline.py  bootstrap.py  enrichment.py  generation.py  graph_index.py  graph_repository.py  graph_search.py  ingestion.py  ner.py  parsing.py  pipeline.py  query_analysis.py  research_question_sets.py  search.py  storage.py  text_utils.py
app/web/: benchmark.html  rag_pipeline.html
benchmark/: dataset.jsonl
rutoken_rag.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
scrape_result/: pageId_2228227.md  pageId_2228235.md  pageId_2228237.md  pageId_2228239.md  pageId_2228243.md  pageId_2228260.md  pageId_3178509.md  pageId_3178513.md  pageId_3178516.md  pageId_3178518.md
scripts/: ingest.py  run_benchmark.py  seed_benchmark_sets.py
