[project]
name = "rutoken-rag"
version = "0.1.0"
description = "Hybrid RAG for Rutoken developer portal documents"
readme = "README.md"
requires-python = ">=3.11,<3.14"
dependencies = [
    "fastapi>=0.122.0,<1.0.0",
    "gigachat>=0.2.0,<1.0.0",
    "numpy>=2.2.3,<3.0.0",
    "openrouter>=0.7.11,<1.0.0",
    "psycopg[binary]>=3.2.10,<4.0.0",
    "qdrant-client>=1.15.1,<2.0.0",
    "rank-bm25>=0.2.2,<1.0.0",
    "sentence-transformers>=5.1.2,<6.0.0",
    "uvicorn>=0.35.0,<1.0.0",
]

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["app"]
